# auto-load-off-test

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
UserGuide/: README.md
demo_data/: README.md
docs/: architecture.md  case_study.md  extending.md  operator_guide.md  safety.md
docs/images/: README.md
src/: cvtTools.py  equips.py  main.py  mapping.py
src/app/: bootstrap.py
src/app/application/: errors.py
src/app/application/ports/: __init__.py  instruments.py  persistence.py
src/app/application/services/: connection_monitor.py  sweep_task_runner.py
src/app/application/use_cases/: load_measurement.py  load_reference.py  save_measurement.py  settings_use_case.py  start_sweep.py
src/app/domain/: auto_range.py  calibration.py  exporters.py
src/app/infrastructure/instruments/: awg_adapter.py  equips_factory.py  osc_adapter.py  ports.py  vendor_gateway.py
src/app/infrastructure/persistence/: file_store.py  measurement_exporter.py  measurement_loader.py  measurement_repo_mat_csv.py  repository_ports.py  settings_defaults.py  settings_repo_json.py  settings_serializer.py
src/app/presentation/tk/: app_window.py  control_panel.py  controller.py  mapper.py  plot_widget.py  sweep_task_runner.py  ui_event_handler.py  view_model.py
src/app/runtime/: __init__.py  paths.py
src/app/shared/: __init__.py  cvt_tools.py  mapping.py
tests/: test_app_paths.py  test_architecture_boundaries.py  test_auto_range_policy.py  test_calibration.py  test_measurement_io.py  test_point_measurement_services.py  test_settings_serializer.py  test_start_sweep_use_case.py  test_sweep_planner_service.py  test_sweep_task_runner.py  test_validators.py
(+7 files in other folders)
